# MARVIS

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  agent.py  cli.py  main.py  pyproject.toml  requirements.txt  trace.jsonl
.github/workflows/: ci.yml
adapters/: fake_adapter.py  openai_adapter.py
core/: controller.py  file_editor.py  tools.py  trace.py  types.py
docs/: architecture.md
marvis_agents/: code_agent.md  system_analyzer.md
modules/: analyzer.py  code_agent.py  supervisor.py  test_runner.py  utils.py.bak.20250909-172837
shopping_website/: pyproject.toml  shopping.db
shopping_website/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  token.py
shopping_website/app/routers/: auth.py  products.py  users.py
tests/: conftest.py  test_analyzer.py  test_code_agent_golden.py  test_code_agent_prompt.py  test_controller.py  test_controller_invalid_plan.py  test_controller_retry_limit.py  test_edit_plan_flow.py  test_file_editor.py  test_file_editor_edges.py  test_openai_adapter_contract.py  test_supervisor_and_controller_paths.py  test_utils_e2e.py  test_utils_small.py  test_utils_small.py.bak.20250909-172837
tests/golden/: code_agent_output.txt
