[tool.poetry]
name = "shopping-website"
version = "0.1.0"
description = "A simple shopping website powered by FastAPI."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
pydantic = {extras = ["email"], version = "^2.4.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"